--- a/c/tree/Makefile
+++ b/c/tree/Makefile
@@ -1,11 +1,10 @@
-all: atree__with_array
-CFLAGS=	-g3 -std=c11
-btree__with_array : tree__with_array_1.c
-	$(CC) $(CFLAGS) $< -o $@
+all: tree__with_array
 
-atree__with_array: tree__with_array.c
+CFLAGS=	-g3 -std=c11
+
+tree__with_array : tree__with_array_1.c
 	$(CC) $(CFLAGS) $< -o $@
 
 .PHONY: clean
 clean:
-	-rm btree__with_array atree__with_array a.out
+	-rm tree__with_array a.out
