IList2d ITree_down() ITree_up()

--- a/c/tree/CMakeLists.txt
+++ b/c/tree/CMakeLists.txt
@@ -10,13 +10,13 @@ set_property(TARGET ITree_01 PROPERTY C_STANDARD 11)
 
 target_compile_definitions(ITree_01 PUBLIC __ISOC11_SOURCE)
 target_link_libraries(ITree_01 PRIVATE $<TARGET_OBJECTS:ITree>)
-target_link_libraries(ITree_01 PRIVATE $<TARGET_OBJECTS:IList>)
+target_link_libraries(ITree_01 PRIVATE $<TARGET_OBJECTS:IList2d>)
 
 add_library( ITree OBJECT ./ITree_01.c)
-add_library( IList OBJECT ./IList.c)
+add_library( IList2d OBJECT ./IList2d.c)
 list(APPEND my_objects
     ITree
-    IList
+    IList2d
 )
 
 foreach(my_object IN LISTS ${my_objects})
